--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -277,7 +277,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="ngayhen">Ngày hẹn</label>
-                                                <input type="date" class="form-control" id="dngayhen">
+                                                <input type="text" class="form-control" id="dngayhen">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -429,7 +429,7 @@
                         <div class="col-6">
                             <div class="input-group add">
                                 <label for="ngayhen">Ngày</label>
-                                <input type="date" class="form-control" id="dngaygoilai">
+                                <input type="text" class="form-control" id="dngaygoilai">
                             </div>
                         </div>
                         <div class="col-6">
@@ -566,7 +566,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="ngayhen">Ngày hẹn</label>
-                                                <input type="date" class="form-control" id="addngayhen">
+                                                <input type="text" class="form-control" id="addngayhen">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -796,5 +796,24 @@
             changeMonth: true,
             dateFormat: "dd/mm/yy"
         }).datepicker("setDate", new Date());
+
+        $("#dngayhen").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        });
+
+        $("#addngayhen").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        })
+
+        $("#dngaygoilai").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        });
+        
     });
 </script>
