--- a/partials/statistics.html
+++ b/partials/statistics.html
@@ -1,198 +1,218 @@
 <div class="main-panel">
-    <div class="content">
-        <nav class="navbar navbar-expand-lg navbar-light sas-bk" style="margin-top:28px; color: #fff">
-            <div class="container">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item" ng-class="{'active': isactive === 1}" ng-click="tq()">
-                            <a class="nav-link padlr-14" href="#">Tổng quan</a>
+	<div class="content">
+		<nav class="navbar navbar-expand-lg navbar-light sas-bk" style="margin-top:28px; color: #fff">
+			<div class="container">
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item" ng-class="{'active': isactive === 1}" ng-click="tq()">
+							<a class="nav-link padlr-14" href="#">Tổng quan</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 2}" ng-click="cg()">
-                            <a class="nav-link padlr-14" href="#">Chưa gọi</a>
+						<li class="nav-item" ng-class="{'active': isactive === 2}" ng-click="cg()">
+							<a class="nav-link padlr-14" href="#">Chưa gọi</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 3}" ng-click="gl()">
-                            <a class="nav-link padlr-14" href="#">Gọi lại</a>
+						<li class="nav-item" ng-class="{'active': isactive === 3}" ng-click="gl()">
+							<a class="nav-link padlr-14" href="#">Gọi lại</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 4}" ng-click="_tl()">
-                            <a class="nav-link padlr-14" href="#">Tỷ lệ</a>
+						<li class="nav-item" ng-class="{'active': isactive === 4}" ng-click="_tl()">
+							<a class="nav-link padlr-14" href="#">Tỷ lệ</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 5}" ng-click="hcd()">
-                            <a class="nav-link padlr-14" href="#">Hẹn chưa đến</a>
+						<li class="nav-item" ng-class="{'active': isactive === 5}" ng-click="hcd()">
+							<a class="nav-link padlr-14" href="#">Hẹn chưa đến</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 6}" ng-click="dcdk()">
-                            <a class="nav-link padlr-14" href="#">Đến chưa đăng ký</a>
+						<li class="nav-item" ng-class="{'active': isactive === 6}" ng-click="dcdk()">
+							<a class="nav-link padlr-14" href="#">Đến chưa đăng ký</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 7}" ng-click="cdk()">
-                            <a class="nav-link padlr-14" href="#">Chưa đăng ký</a>
+						<li class="nav-item" ng-class="{'active': isactive === 7}" ng-click="cdk()">
+							<a class="nav-link padlr-14" href="#">Chưa đăng ký</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 8}" ng-click="ktn()">
-                            <a class="nav-link padlr-14" href="#">Không tiềm năng</a>
+						<li class="nav-item" ng-class="{'active': isactive === 8}" ng-click="ktn()">
+							<a class="nav-link padlr-14" href="#">Không tiềm năng</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 10}" ng-click="h()">
-                            <a class="nav-link padlr-14" href="#">Hủy</a>
+						<li class="nav-item" ng-class="{'active': isactive === 10}" ng-click="h()">
+							<a class="nav-link padlr-14" href="#">Hủy</a>
 						</li>
-                        <li class="nav-item" ng-class="{'active': isactive === 9}" ng-click="_lh()">
-                            <a class="nav-link padlr-14" href="#">Lịch hẹn</a>
+						<li class="nav-item" ng-class="{'active': isactive === 9}" ng-click="_lh()">
+							<a class="nav-link padlr-14" href="#">Lịch hẹn</a>
 						</li>
-                        <!-- <li class="nav-item" ng-class="{'active': isactive === 11}" ng-click="cn()">
+						<!-- <li class="nav-item" ng-class="{'active': isactive === 11}" ng-click="cn()">
                             <a class="nav-link padlr-14" href="#">Cá nhân</a>
 						</li> -->
 					</ul>
 				</div>
 			</div>
 		</nav>
-		
-        <div class="container-fluid">
-            <div class="row">
-                <div class="card chartcard">
-                    <div class="row padlr-14">
-                        <div ng-class="{'col-lg-3' : auth.Role[0].id === 0 , 'col-lg-4' : auth.Role[0].id !== 0}" class="text-center">
-                            <div class="input-group add">
-                                <label for="fromd">Từ</label>
-                                <input type="date" class="form-control" id="fromd">
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="card chartcard">
+					<div class="row padlr-14">
+						<div ng-class="{'col-lg-3' : auth.Role[0].id === 0 , 'col-lg-4' : auth.Role[0].id !== 0}" class="text-center">
+							<div class="input-group add">
+								<label for="fromd">Từ</label>
+								<input type="text" class="form-control" id="fromd">
 							</div>
 						</div>
-                        <div ng-class="{'col-lg-3' : auth.Role[0].id === 0 , 'col-lg-4' : auth.Role[0].id !== 0}" >
-                            <div class="input-group add">
-                                <label for="tod">Đến</label>
-                                <input type="date" class="form-control" id="tod">
+						<div ng-class="{'col-lg-3' : auth.Role[0].id === 0 , 'col-lg-4' : auth.Role[0].id !== 0}">
+							<div class="input-group add">
+								<label for="tod">Đến</label>
+								<input type="text" class="form-control" id="tod">
 							</div>
 						</div>
 						<div class="col-lg-3" ng-show="auth.Role[0].id === 0">
 							<div class="input-group add">
 								<label for="form">Groups</label>
-								<select class="form-control" ng-model="mgroup"
-								ng-options="option.Name for option in AllGroups">
+								<select class="form-control" ng-model="mgroup" ng-options="option.Name for option in AllGroups">
 								</select>
 							</div>
 						</div>
-                        <div ng-class="{'col-lg-3' : auth.Role[0].id === 0 , 'col-lg-4' : auth.Role[0].id !== 0}" >
-                            <button type="button" class="btn sas-bk btn-block" ng-click="fillbyday()">Lọc</button>
-							
+						<div ng-class="{'col-lg-3' : auth.Role[0].id === 0 , 'col-lg-4' : auth.Role[0].id !== 0}">
+							<button type="button" class="btn sas-bk btn-block" ng-click="fillbyday()">Lọc</button>
+
 						</div>
 					</div>
-					
-                    <!-- Tổng quan -->
-                    <center>
-                        <canvas id="bar" chart-series="series" ng-show="isactive === 1" height="400" chart-s width="1000" class="chart chart-bar"
-						chart-data="data" chart-labels="labels1">
+
+					<!-- Tổng quan -->
+					<center>
+						<canvas id="bar" chart-series="series" ng-show="isactive === 1" height="400" chart-s width="1000" class="chart chart-bar"
+						 chart-data="data" chart-labels="labels1">
 						</canvas>
 					</center>
-					
-                    <!-- Chưa gọi -->
-                    <center>
-                        <canvas id="bar" chart-series="series2" ng-show="isactive === 2" height="400" chart-s width="1000" class="chart chart-bar"
-					chart-data="data2" chart-labels="labels2">
-					</canvas>
+
+					<!-- Chưa gọi -->
+					<center>
+						<canvas id="bar" chart-series="series2" ng-show="isactive === 2" height="400" chart-s width="1000" class="chart chart-bar"
+						 chart-data="data2" chart-labels="labels2">
+						</canvas>
 					</center>
-					
+
 					<!-- Gọi lại -->
 					<center>
-					<canvas id="bar" chart-series="series3" ng-show="isactive === 3" height="400" chart-s width="1000" class="chart chart-bar"
-					chart-data="data3" chart-labels="labels3">
-					</canvas>
+						<canvas id="bar" chart-series="series3" ng-show="isactive === 3" height="400" chart-s width="1000" class="chart chart-bar"
+						 chart-data="data3" chart-labels="labels3">
+						</canvas>
 					</center>
-					
+
 					<!-- Tỷ lệ -->
 					<div class="material-datatables" ng-show="isactive === 4">
-					<table cellpadding="0" ng-show="tl.length > 0" class="table table-striped cell-border table-hover text-center">
-					<thead>
-					<tr>
-					<th>STT</th>
-					<th>Nhân Viên</th>
-					<th>Online</th>
-					<th>Đã hẹn lần 1 <br/>( % trên online )
-					</th>
-					<th>Hẹn lần 1 chưa đến<br/>( % trên đã hẹn lần 1 )
-					</th>
-					<th>Đến chưa đăng ký <br/>( % trên online )
-					</th>
-					</tr>
-					</thead>
-					<tbody>
-					<tr ng-repeat="content in tl">
-					<td>{{$index +1}}</td>
-					<td>{{content[0].Fullname}}</td>
-					<td>{{content[0].On.length}} </td>
-					<td>{{content[0].App.length}} ({{(content[0].App.length / content[0].On.length)*100}}
-					%)
-					</td>
-					<td>{{content[0].Notapp.length}} ({{(content[0].Notapp.length / content[0].App.length)*100}}
-					%)
-					</td>
-					<td>{{content[0].Notreg.length}} ({{(content[0].Notreg.length / content[0].On.length)*100}}
-					%)
-					</td>
-					</tr>
-					</tbody>
-					</table>
-					
-					<h4 class="text-center" ng-show="tl.length === 0">Hiện tại không có dữ liệu phù hợp</h4>
-					
+						<table cellpadding="0" ng-show="tl.length > 0" class="table table-striped cell-border table-hover text-center">
+							<thead>
+								<tr>
+									<th>STT</th>
+									<th>Nhân Viên</th>
+									<th>Online</th>
+									<th>Đã hẹn lần 1 <br />( % trên online )
+									</th>
+									<th>Hẹn lần 1 chưa đến<br />( % trên đã hẹn lần 1 )
+									</th>
+									<th>Đến chưa đăng ký <br />( % trên online )
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr ng-repeat="content in tl">
+									<td>{{$index +1}}</td>
+									<td>{{content[0].Fullname}}</td>
+									<td>{{content[0].On.length}} </td>
+									<td>{{content[0].App.length}} ({{(content[0].App.length / content[0].On.length)*100}}
+										%)
+									</td>
+									<td>{{content[0].Notapp.length}} ({{(content[0].Notapp.length / content[0].App.length)*100}}
+										%)
+									</td>
+									<td>{{content[0].Notreg.length}} ({{(content[0].Notreg.length / content[0].On.length)*100}}
+										%)
+									</td>
+								</tr>
+							</tbody>
+						</table>
+
+						<h4 class="text-center" ng-show="tl.length === 0">Hiện tại không có dữ liệu phù hợp</h4>
+
 					</div>
-					
+
 					<!-- Hẹn chưa đến -->
 					<center>
-					<canvas id="bar" chart-series="series5" ng-show="isactive === 5" height="400" chart-s width="1000" class="chart chart-bar"
-					chart-data="data5" chart-labels="labels5">
-					</canvas>
+						<canvas id="bar" chart-series="series5" ng-show="isactive === 5" height="400" chart-s width="1000" class="chart chart-bar"
+						 chart-data="data5" chart-labels="labels5">
+						</canvas>
 					</center>
-					
+
 					<!-- Đến chưa đăng ký -->
 					<center>
-					<canvas id="bar" chart-series="series6" ng-show="isactive === 6" height="400" chart-s width="1000" class="chart chart-bar"
-					chart-data="data6" chart-labels="labels6">
-					</canvas>
+						<canvas id="bar" chart-series="series6" ng-show="isactive === 6" height="400" chart-s width="1000" class="chart chart-bar"
+						 chart-data="data6" chart-labels="labels6">
+						</canvas>
 					</center>
-					
+
 					<!-- Chưa đăng ký -->
 					<center>
-					<canvas id="bar" chart-series="series7" ng-show="isactive === 7" height="400" chart-s width="1000" class="chart chart-bar"
-					chart-data="data7" chart-labels="labels7">
-					</canvas>
+						<canvas id="bar" chart-series="series7" ng-show="isactive === 7" height="400" chart-s width="1000" class="chart chart-bar"
+						 chart-data="data7" chart-labels="labels7">
+						</canvas>
 					</center>
-					
+
 					<!-- Không tiềm năng -->
 					<center>
-					<canvas id="bar" chart-series="series8" ng-show="isactive === 8" height="400" chart-s width="1000" class="chart chart-bar"
-					chart-data="data8" chart-labels="labels8">
-					</canvas>
+						<canvas id="bar" chart-series="series8" ng-show="isactive === 8" height="400" chart-s width="1000" class="chart chart-bar"
+						 chart-data="data8" chart-labels="labels8">
+						</canvas>
 					</center>
-					
+
 					<!-- Hủy -->
 					<center>
-					<canvas id="bar" chart-series="series9" ng-show="isactive === 10" height="400" chart-s width="1000" class="chart chart-bar"
-					chart-data="data9" chart-labels="labels9">
-					</canvas>
+						<canvas id="bar" chart-series="series9" ng-show="isactive === 10" height="400" chart-s width="1000" class="chart chart-bar"
+						 chart-data="data9" chart-labels="labels9">
+						</canvas>
 					</center>
-					
+
 					<!-- Lịch hẹn -->
 					<div class="material-datatables" ng-show="isactive === 9">
-					<table cellpadding="0"  ng-show="lh.length > 0" class="table table-striped cell-border table-hover text-center">
-					<thead>
-					<tr>
-					<th>STT</th>
-					<th>Nhân Viên</th>
-					<th>Học viên hẹn</th>
-					<th>Đã đăng ký</th>
-					<th>Đến chưa đăng ký</th>
-					</tr>
-					</thead>
-					<tbody>
-					<tr ng-repeat="content in lh">
-					<td>{{$index +1}}</td>
-					<td>{{content[0].Fullname}}</td>
-					<td>{{content[0].DH.length}} </td>
-					<td>{{content[0].Ddk.length}}</td>
-					<td>{{content[0].Dcdk.length}}</td>
-					</tr>
-					</tbody>
-					</table>
-					<h4 class="text-center" ng-show="lh.length === 0">Hiện tại không có dữ liệu phù hợp</h4>
+						<table cellpadding="0" ng-show="lh.length > 0" class="table table-striped cell-border table-hover text-center">
+							<thead>
+								<tr>
+									<th>STT</th>
+									<th>Nhân Viên</th>
+									<th>Học viên hẹn</th>
+									<th>Đã đăng ký</th>
+									<th>Đến chưa đăng ký</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr ng-repeat="content in lh">
+									<td>{{$index +1}}</td>
+									<td>{{content[0].Fullname}}</td>
+									<td>{{content[0].DH.length}} </td>
+									<td>{{content[0].Ddk.length}}</td>
+									<td>{{content[0].Dcdk.length}}</td>
+								</tr>
+							</tbody>
+						</table>
+						<h4 class="text-center" ng-show="lh.length === 0">Hiện tại không có dữ liệu phù hợp</h4>
 					</div>
-					</div>
-					</div>
-					</div>
-					
 				</div>
-				</div>				
+			</div>
+		</div>
+
+	</div>
+</div>
+
+<script>
+	$(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+		var startDate = new Date(currYear, currMonth, 1);
+
+		$("#fromd").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#tod").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+	})
+</script>
